# variorum

./: .flake8  .gitignore  .gitlab-ci.yml  .readthedocs.yml  .travis.yaml  .travis.yml  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog  ChangeLog.md  LICENSE  README  README.md  TODO  UNIT_TESTS  azure-pipelines.yml
src/: CMakeLists.txt
src/CMake/: CMakeBasics.cmake  Setup3rdParty.cmake  SetupCompilerOptions.cmake  SetupDocs.cmake  SetupExternalProjects.cmake  SetupFortran.cmake  SetupTests.cmake  VariorumBuildType.cmake
src/config/: CMakeLists.txt  VariorumConfig.cmake.in  variorum.pc.in  variorum_config.mk.in  variorum_setup_deps.cmake  variorum_setup_targets.cmake
src/docs/: CMakeLists.txt
src/docs/breathe/: CMakeLists.txt
src/docs/dox/: CMakeLists.txt  Doxyfile  Doxyfile.in
src/docs/sphinx/: AMD.rst  ARM.rst  Argo.rst  BuildingVariorum.rst  CMakeLists.txt  CodeOfConduct.rst  ContribGuide.rst  Contributors.rst  EEHPC.rst  Examples.rst  HWArchitectures.rst  IBM.rst  Intel.rst  IntelDGPU.rst  IntelGPU.rst  Licenses.rst  Nvidia.rst  Overview.rst  PowerAPI.rst  PowerStack.rst  Powmon.rst  Publications.rst  QuickStart.rst  Releases.rst  UnitTesting.rst  Utilities.rst  VarMonitor.rst  VarUtility.rst  Variorum.rst  VariorumAPI.rst  VariorumDevel.rst  VariorumTools.rst  conf.py  conf.py.in  environment.yml  index.rst  index.rst.in  requirements.txt
src/examples/: CMakeLists.txt  README  ex-disable-turbo.c  ex-dump-clock-speed.c  ex-dump-counters.c  ex-dump-hyperthreading.c  ex-dump-package-frequency.c  ex-dump-power-limits.c  ex-dump-power.c  ex-dump-thermals.c  ex-dump-turbo.c  ex-enable-turbo.c  ex-json-get-power.c  ex-monitoring-to-file.c  ex-poll-power-to-file.c  ex-poll-power-to-stdout.c  ex-poll-power.c  ex-print-clock-speed.c  ex-print-counters.c  ex-print-features.c  ex-print-gpu-utilization.c  ex-print-hyperthreading.c  ex-print-package-frequency.c  ex-print-power-limits.c  ex-print-power.c  ex-print-thermals.c  ex-print-topology.c  ex-print-turbo.c  ex-print-verbose-clock-speed.c  ex-print-verbose-counters.c  ex-print-verbose-gpu-utilization.c  ex-print-verbose-power-limits.c  ex-print-verbose-power.c  ex-print-verbose-thermals.c  ex-set-and-verify-node-power-limit.c  ex-set-cpu-clock-speed.c  ex-set-gpu-power-ratio.c  ex-set-node-power-limit.c  ex-set-power-limits.c  ex-set-socket-power-limits.c  (+65 more)
src/examples/fortran-examples/: CMakeLists.txt  variorum-print-power-fortran-example.f90  variorum-print-thermals-fortran-example.f90
src/examples/mpi-examples/: CMakeLists.txt  runme.sh  variorum-cap-socket-power-limit-mpi-example.c  variorum-print-power-limit-mpi-example.c  variorum-print-power-mpi-example.c  variorum-print-verbose-power-limit-mpi-example.c  variorum-print-verbose-power-mpi-example.c
src/examples/mpi-openmp-examples/: CMakeLists.txt  runme.sh  variorum-cap-socket-power-limit-mpi-example.c  variorum-cap-socket-power-limits-mpi-example.c  variorum-print-power-limit-mpi-example.c  variorum-print-power-limits-mpi-example.c  variorum-print-power-mpi-example.c  variorum-print-verbose-power-limits-mpi-example.c  variorum-print-verbose-power-mpi-example.c
src/examples/openmp-examples/: CMakeLists.txt  runme.sh  variorum-cap-socket-power-limit-openmp-example.c  variorum-print-power-limit-openmp-example.c  variorum-print-power-openmp-example.c  variorum-print-verbose-power-limit-openmp-example.c  variorum-print-verbose-power-openmp-example.c
src/examples/python-examples/: CMakeLists.txt  runAllExamples.py  variorum-cap-best-effort-node-power-limit-python-example.py  variorum-cap-gpu-power-ratio-python-example.py  variorum-cap-socket-power-limit-python-example.py  variorum-get-current-version-python-example.py  variorum-get-node-power-domain-info-json-python-example.py  variorum-get-node-power-json-python-example.py  variorum-print-available-frequencies-python-example.py  variorum-print-counters-python-example.py  variorum-print-features-python-example.py  variorum-print-frequency-python-example.py  variorum-print-gpu-utilization-python-example.py  variorum-print-hyperthreading-python-example.py  variorum-print-power-limit-python-example.py  variorum-print-power-python-example.py  variorum-print-thermals-python-example.py  variorum-print-topology-python-example.py  variorum-print-turbo-python-example.py  variorum-print-verbose-counters-python-example.py  variorum-print-verbose-frequency-python-example.py  variorum-print-verbose-gpu-utilization-python-example.py  variorum-print-verbose-power-limit-python-example.py  variorum-print-verbose-power-python-example.py  variorum-print-verbose-thermals-python-example.py
src/examples/using-with-mpi/: CMakeLists.txt  variorum-print-power-mpi-example.c
src/powmon/: CMakeLists.txt  README.md  common.c  highlander.c  highlander.h  power_wrapper_dynamic.c  power_wrapper_static.c  powmon.c
src/powmon/scripts/: powmon-ibm-plot.R  powmon-ibm-post-process.sh  powmon-plot.py
src/pyVariorum/: README.rst  pyJansson.py  pyVariorum.py  runtests.py  setup.py
src/pyVariorum/examples/: runtests.py
src/pyVariorum/pyVariorum/: pyVariorum.py  runtests.py
src/python_wrappers/: README.rst  setup.py
src/python_wrappers/examples/: runtests.py
src/python_wrappers/pyVariorum/: pyVariorum.py
src/shim/: design_notes
src/tests/: CMakeLists.txt  README  t_msr_driver.cpp  t_msr_safe_driver.cpp  t_msr_whitelist.cpp  t_variorum_test.cpp
src/tests/system-env/: CMakeLists.txt
src/tests/variorum/: CMakeLists.txt  t_variorum_monitoring.cpp  (+24 more)
src/thirdparty_builtin/: CMakeLists.txt
src/utilities/: verify_arm.py  verify_msr_kernel.py  verify_opal.py
src/var_monitor/: CMakeLists.txt  README.md  common.c  highlander.c  highlander.h  power_wrapper_dynamic.c  power_wrapper_static.c  var_monitor.c
src/variorum/: CMakeLists.txt  config_architecture.c  config_architecture.h  msr_core.c  msr_core.h  rehaul-notes  variorum.c  variorum.f90  variorum.h  variorum_config.h.in  variorum_cpuid.c  variorum_cpuid.h  variorum_error.c  variorum_error.h  variorum_timers.c  variorum_timers.h  variorum_topology.c  variorum_topology.h
(+349 files in other folders)
